# Skywalker

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  alias.cu  alias.cuh  build.sh  compile_commands.json  readme.md  runner.sh  vec.cuh
cmake/: FindNuma.cmake
figs/: dynamic.sh  offline.sh  online.sh  scale.sh  scale2.sh  spec.sh  test copy 2.sh  test_driver.sh  unbiased.sh  v100.sh  with_nextdoor.sh
include/: alias_table.cuh  alias_table_new.cuh  alias_table_old.cuh  app.cuh  error.cuh  frontier.cuh  gpu_graph.cuh  graph.cuh  graph.h  graph.hpp  header.h  instance.cuh  kernel.cuh  result.cuh  roller.cuh  sampler.cuh  sampler_result.cuh  table.cuh  util.cuh  util.h  vec.cuh  wtime.h
include/src/: Makefile  main  main.cu
old/: alias.cu  alias.cuh  common.cuh  graph.cuh  vec.cuh
old/shmem/: alias  alias_table.cu  alias_table.cuh  tmp.cu  vec.cuh
result/: knightking.sh  nextdoor.sh  nextdoor_unbias.sh
scripts/: biased.sh  csaw.sh  data.sh  debug.sh  fig8_biased.sh  graphwalker.sh  knightking.sh  mem_test.sh  multiple-gpu.sh  my.sh  numa.sh  saint.sh  simple_args_parsing.sh  table3_unbiased.sh  test.sh  trans.py  trans2.py  trw-biased.sh  trw-unbiased.sh
shmem/: Makefile  alias  alias_table.cu  alias_table.cuh  tmp.cu  util.cuh  vec.cuh
src/: Makefile  alias  alias_table.cu  bias.cu  bias_degree.cu  bias_node2vec.cu  createTable.cu  entry.cu  entry_rw.cu  kernel.cu  main  main.cu  offline_sample.cu  offline_sample_async.cu  offline_walk.cu  online_sample.cu  online_sample_new.cu  online_sample_twc.cu  online_walk.cu  online_walk_gmem.cu  rw.cu  sample.cu  sample_rw.cu  sample_rw2.cu  sampler.cu  sampler_gbuffer.cu  sampler_spliced.cu  unbiased_sample.cu  unbiased_walk.cu  util.cu  vec.cu  walker.cu  walker_gbuffer.cu
src/api/: bias_degree.cu  bias_node2vec.cu  bias_static.cu
src/example/: bias_degree.cu  bias_node2vec.cu
test/: alias_table.cu  tmp.cu
tools/: Makefile  drop-caches.sh  getDegree  getDegree.cu  getsnapgraph.sh  getwebgraph.sh  gr2npz.cu
